--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -32,7 +32,7 @@
                 <ul class="dropdown-menu">
                   <li><%= link_to 'Colleges', admin_colleges_path %></a></li>
                   <li><%= link_to 'Courses', courses_path %></a></li>
-                  <li><a href="#">Teams</a></li>
+                  <li><%= link_to 'Teams', teams_path %></a></li>
                   <li><%= link_to 'Members', members_admin_index_path %></a></li>
                 </ul>
               </li>
