--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,1 +1,14 @@
-<%= link_to "Add players", "#" %>
+<h2><%= @team.team_name %></h2>
+
+
+<h3>Add Team Member</h3>
+<div class="row form-group nxtform" id='add-member'>
+  <%= form_tag(add_user_profile_index_path) do %>
+    <div class="col-md-4">
+      <div class="form-group"><%= text_field_tag 'email', nil, type: "email", class: "form-control", id: "email", placeholder: "Enter email address" %></div>
+      <div class="form-group"><%= hidden_field_tag(:role_type_id, RoleType.MEMBER.id) %></div>
+      <div class="form-group"><%= hidden_field_tag(:team_id, @team.id) %></div>
+      <%= submit_tag 'Invite Team Member', class: 'col-sm-3 btn btn-primary form-group' %>
+    </div>
+  <% end %>
+</div>
