--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -4,5 +4,6 @@
 
 <%= simple_form_for @team do |f|%>
   <%=f.input :team_name, label: "Team Name" %>
+  <%=f.input :recognition, label: "Recognition" %>
   <%=f.submit "Submit"%>
 <% end %>
