carrierwave functioning, tests run green

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,5 +1,5 @@
 <h2><%= @team.team_name %></h2>
-
+<%= image_tag @team.team_logo_url %><br>
 
 <h3>Add Team Member</h3>
 <div class="row form-group nxtform" id='add-member'>
