complete team index page w/o styling

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -4,5 +4,6 @@
 <h3>Teams already invited</h3>
 <% @teams.each do |team| %>
   <%= team.college.name %> - <%= team.team_name %><br />
+  <%= image_tag team.team_logo_url %><br />
 <% end %>
 
