--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -12,3 +12,14 @@
     </div>
   <% end %>
 </div>
+
+<div>
+  <h3>Invited Members</h3>
+  <% @team.users.each do |member|%>
+    <div id=<%=member.id%> >
+      <%= member.email %> 
+      <%= link_to "remove member", update_team_membership_path(member), method: :put%> 
+    </div>
+    </br>
+  <% end %>
+</div>
