added styling to team show page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -46,3 +46,17 @@ body {
   list-style: none;
   padding: 0.5em;
 }
+
+#middle_col {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+}
+
+#right_col {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+}
+
+
