--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,26 +1,39 @@
-<h2><%= @team.team_name %> <%= link_to 'Edit Team', edit_team_path(@team) if @team.president?(current_user) %></h2>
-<%= image_tag @team.team_logo_url %><br>
-<%= @team.recognition %>
+<div class="row">
+  <div class="col-sm-4">
+    <h2><%= @team.team_name %> <h2>
+    <%= image_tag @team.team_logo_url %><br>
+    <h4>Team Recognition:<h4>
+    <%= @team.recognition %>
+  </div>
 
-<h3>Add Team Member</h3>
-<div class="row form-group nxtform" id='add-member'>
-  <%= form_tag(add_user_profile_index_path) do %>
-    <div class="col-md-4">
-      <div class="form-group"><%= text_field_tag 'email', nil, type: "email", class: "form-control", id: "email", placeholder: "Enter email address" %></div>
-      <div class="form-group"><%= hidden_field_tag(:role_type_id, RoleType.MEMBER.id) %></div>
-      <div class="form-group"><%= hidden_field_tag(:team_id, @team.id) %></div>
-      <%= submit_tag 'Invite Team Member', class: 'col-sm-3 btn btn-primary form-group' %>
+  <div class="col-sm-4" id="middle_col">
+    <h3> Team Members </h3>
+      <% @team.users.each do |user| %>
+        <% unless user.user_profile.nil? %>
+          <%= user.user_profile.first_name %>
+          <%=user.user_profile.last_name %>
+        <% end %>
+      <% end %>
+  </div>
+  <div class="col-sm-4" id="right_col">
+    <h3>Add Team Member</h3>
+    <div class="row form-group nxtform" id='add-member'>
+      <%= form_tag(add_user_profile_index_path) do %>
+        <div>
+          <div class="form-group"><%= text_field_tag 'email', nil, type: "email", class: "form-control", id: "email", placeholder: "Enter email address" %></div>
+          <div class="form-group"><%= hidden_field_tag(:role_type_id, RoleType.MEMBER.id) %></div>
+          <div class="form-group"><%= hidden_field_tag(:team_id, @team.id) %></div>
+          <%= submit_tag 'Invite Team Member', class: 'col-sm-7 btn btn-primary form-group' %>
+        </div>
+      <% end %>
     </div>
-  <% end %>
-</div>
-
-<div>
-  <h3>Invited Members</h3>
-  <% @team.users.each do |member|%>
-    <div id=<%=member.id%> >
-      <%= member.email %> 
-      <%= link_to "remove member", update_team_membership_path(member_id: member.id), method: :put %> 
-    </div>
-    </br>
-  <% end %>
+    <h3>Invited Members</h3>
+    <% @team.users.each do |member|%>
+      <div id=<%=member.id%> >
+        <%= member.email %>
+        <%= link_to "remove member", update_team_membership_path(member_id: member.id), method: :put %>
+      </div>
+      </br>
+    <% end %>
+  </div>
 </div>
