--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -12,28 +12,30 @@
         <% unless user.user_profile.nil? %>
           <%= link_to "#{user.user_profile.first_name}
           #{user.user_profile.last_name}", profile_path(user) %>
-          <%= link_to "remove member", update_team_membership_path(member_id: user.id), method: :put %>
+        <%= link_to "remove member", update_team_membership_path(member_id: user.id), method: :put if @team.can_admin?(current_user) %>
         <% end %>
       <% end %>
   </div>
-  <div class="col-sm-4" id="right_col">
-    <h3>Add Team Member</h3>
-    <div class="row form-group nxtform" id='add-member'>
-      <%= form_tag(add_user_profile_index_path) do %>
-        <div>
-          <div class="form-group"><%= text_field_tag 'email', nil, type: "email", class: "form-control", id: "email", placeholder: "Enter email address" %></div>
-          <div class="form-group"><%= hidden_field_tag(:role_type_id, RoleType.MEMBER.id) %></div>
-          <div class="form-group"><%= hidden_field_tag(:team_id, @team.id) %></div>
-          <%= submit_tag 'Invite Team Member', class: 'col-sm-7 btn btn-primary form-group' %>
-        </div>
-      <% end %>
-    </div>
+  <% if @team.can_admin?(current_user) %>
+    <div class="col-sm-4" id="right_col">
+      <h3>Add Team Member</h3> or <%= link_to 'Edit Team', edit_team_path(@team) %>
+      <div class="row form-group nxtform" id='add-member'>
+        <%= form_tag(add_user_profile_index_path) do %>
+          <div>
+            <div class="form-group"><%= text_field_tag 'email', nil, type: "email", class: "form-control", id: "email", placeholder: "Enter email address" %></div>
+            <div class="form-group"><%= hidden_field_tag(:role_type_id, RoleType.MEMBER.id) %></div>
+            <div class="form-group"><%= hidden_field_tag(:team_id, @team.id) %></div>
+            <%= submit_tag 'Invite Team Member', class: 'col-sm-7 btn btn-primary form-group' %>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
     <h3>Invited Members</h3>
     <% @team.users.each do |member|%>
       <div id=<%=member.id%> >
         <% unless member.user_profile.present? %>
           <%= member.email %>
-          <%= link_to "remove member", update_team_membership_path(member_id: member.id), method: :put %>
+          <%= link_to "remove member", update_team_membership_path(member_id: member.id), method: :put if @team.can_admin?(current_user) %>
         <% end %>
       </div>
       </br>
